Fix missing whitespace after hyphen between project name and event title in Activity view (#42070).
Patch by Go MAEDA (user:maeda).


git-svn-id: https://svn.redmine.org/redmine/trunk@23432 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -768,7 +768,7 @@ div#activity dt svg.icon-svg {margin-right: 4px;}
 div#activity dt.me .time { border-bottom: 1px solid #999; }
 div#activity dt .time { color: #555; font-size: 0.8125rem; margin-right: 4px; }
 div#activity dd .description, #search-results dd .description { font-style: italic; margin: 2px 0;}
-div#activity span.project:after, #search-results span.project:after { content: " -"; }
+div#activity span.project:after, #search-results span.project:after { content: " - "; white-space: pre;}
 div#activity dd span.description, #search-results dd span.description { display:block; color: #666; }
 div#activity dt.grouped {padding-left:5em;}
 div#activity dd.grouped {margin-left:9em;}
